ArraySet tests improved